@@ -68,6 +68,10 @@ public:
   /** Method load() reloads the object from the StorageManager */
   void load(Advocate & adv);
 
+  /** Ignore failure return codes */
+  void setIgnoreFailure(const Bool ignoreFailure);
+  Bool getIgnoreFailure() const;
+
 protected:
   /** Check whether this problem can be solved by this solver.  Must be overloaded by the actual optimisation algorithm */
   void checkProblem(const OptimizationProblem & problem) const;
@@ -91,6 +95,9 @@ private:
   Sample evaluationOutputHistory_;
   Sample equalityConstraintHistory_;
   Sample inequalityConstraintHistory_;
+
+  /** Whether to ignore failure return codes */
+  Bool ignoreFailure_;
 
 }; /* class Cobyla */
 
