@@ -104,6 +104,10 @@ public:
   /** Method load() reloads the object from the StorageManager */
   void load(Advocate & adv);
 
+  /** Ignore failure return codes */
+  void setIgnoreFailure(const Bool ignoreFailure);
+  Bool getIgnoreFailure() const;
+
 protected:
   /** Check whether this problem can be solved by this solver.  Must be overloaded by the actual optimisation algorithm */
   void checkProblem(const OptimizationProblem & problem) const;
@@ -128,6 +132,9 @@ private:
   Sample evaluationOutputHistory_;
 
   void * p_nfeval_;
+
+  /** Whether to ignore failure return codes */
+  Bool ignoreFailure_;
 
 }; /* class TNC */
 
