@@ -415,6 +415,7 @@ void ARMALikelihoodFactory::initializeCobylaSolverParameter()
   if (cobyla == NULL) throw InternalException(HERE);
 
   cobyla->setRhoBeg(ResourceMap::GetAsScalar("ARMALikelihoodFactory-DefaultRhoBeg"));
+  cobyla->setIgnoreFailure(true);
 
   solver_.setMaximumAbsoluteError(ResourceMap::GetAsScalar("ARMALikelihoodFactory-DefaultRhoEnd"));
   solver_.setMaximumEvaluationNumber(ResourceMap::GetAsUnsignedInteger("ARMALikelihoodFactory-DefaultMaximumEvaluationNumber"));
