@@ -30,6 +30,7 @@ Examples
 >>> model = ot.SymbolicFunction(['E', 'F', 'L', 'I'], ['-F*L^3/(3*E*I)'])
 >>> problem = ot.NearestPointProblem(model, 5.0)
 >>> algo = ot.Cobyla(problem)
+>>> algo.setMaximumEvaluationNumber(10000)
 >>> algo.setStartingPoint([1.0] * 4)
 >>> algo.run()
 >>> result = algo.getResult()"
@@ -53,3 +54,24 @@ Parameters
 ----------
 rhoBeg : float
     A reasonable initial change to the variables."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Cobyla::setIgnoreFailure
+"Accessor to ignore failure flag.
+
+Parameters
+----------
+ignore_failure : bool
+    Whether to ignore failure return codes."
+
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::Cobyla::getIgnoreFailure
+"Accessor to ignore failure flag.
+
+Returns
+-------
+ignore_failure : bool
+    Whether to ignore failure return codes."
