@@ -30,7 +30,7 @@ Define an optimization problem to find the minimum of the Rosenbrock function:
 >>> solver = ot.OptimizationAlgorithm(problem)
 >>> solver.setStartingPoint([0, 0])
 >>> solver.setMaximumResidualError(1.e-3)
->>> solver.setMaximumIterationNumber(100)
+>>> solver.setMaximumEvaluationNumber(10000)
 >>> solver.run()
 >>> result = solver.getResult()
 >>> x_star = result.getOptimalPoint()
@@ -416,7 +416,7 @@ Examples
 >>> solver = ot.OptimizationAlgorithm(problem)
 >>> solver.setStartingPoint([0, 0])
 >>> solver.setMaximumResidualError(1.e-3)
->>> solver.setMaximumIterationNumber(100)
+>>> solver.setMaximumEvaluationNumber(10000)
 >>> def report_progress(progress):
 ...     sys.stderr.write('-- progress=' + str(progress) + '%\n')
 >>> solver.setProgressCallback(report_progress)
@@ -445,7 +445,7 @@ Examples
 >>> solver = ot.OptimizationAlgorithm(problem)
 >>> solver.setStartingPoint([0, 0])
 >>> solver.setMaximumResidualError(1.e-3)
->>> solver.setMaximumIterationNumber(100)
+>>> solver.setMaximumEvaluationNumber(10000)
 >>> def ask_stop():
 ...     return True
 >>> solver.setStopCallback(ask_stop)
