@@ -17,7 +17,7 @@ vect = ot.RandomVector(distribution)
 output = ot.CompositeRandomVector(model, vect)
 event = ot.ThresholdEvent(output, ot.Greater(), 0.0)
 solver = ot.Cobyla()
-solver.setMaximumEvaluationNumber(200)
+solver.setMaximumEvaluationNumber(1000)
 solver.setMaximumAbsoluteError(1.0e-10)
 solver.setMaximumRelativeError(1.0e-10)
 solver.setMaximumResidualError(1.0e-10)
