@@ -18,9 +18,12 @@
 === Bug fixes ===
  * #1267 (Some CSV files cannot be imported)
  * #1377 (The `setKnownParameter` method is not compatible with `buildEstimator`)
+ * #1447 (Highly inaccurate result in reliability model when using subset of RandomVector)
+ * #1474 (optimization defaults)
  * #1507 (Leak in Collection typemaps)
  * #1510 (ot.Ceres('LEVENBERG_MARQUARDT') and ot.Ceres('DOGLEG') do not handle bound constraints)
  * #1521 (Basis of MonomialFunction)
+
 
 == 1.15 release (2020-05-25) == #release-1.15
 
